--- a/docs/Auto/Возможнсть запретить выполение операций по стоп-факторам.md
+++ b/docs/Auto/Возможнсть запретить выполение операций по стоп-факторам.md
@@ -40,3 +40,9 @@
 
 	005. Можно изменить список маркеров которые считаются стоп-фактором
 ![](Возможнсть_запретить_выполение_операций_по_стоп-факторам/Возможнсть_запретить_выполение_операций_по_стоп-факторам_27_Настройка_модуля_для_проверки__005.png)
+
+Видео
+
+<iframe width="1280" height="720"
+  src="https://youtu.be/MaCJtkSlreE">
+</iframe>
