--- a/docs/Auto/Возможнсть запретить выполение операций по стоп-факторам.md
+++ b/docs/Auto/Возможнсть запретить выполение операций по стоп-факторам.md
@@ -44,5 +44,5 @@
 Видео
 
 <iframe width="1280" height="720"
-  src="https://youtu.be/MaCJtkSlreE">
+  src="https://www.youtube.com/embed/MaCJtkSlreE">
 </iframe>
