добавил вводный текст в информацию о панели администрирования

--- a/docs/Auto/list_admin/Панель Администрирование списков проверки.md
+++ b/docs/Auto/list_admin/Панель Администрирование списков проверки.md
@@ -1,9 +1,11 @@
-**Функционал:** Панель Администрирование списков проверки
+**Функционал:** Панель "Администрирование списков проверки"
 
+> Администрирование списков проверки предназначено для централизованного управления списками всех пользователей. Администрирование списков проверки производится через панель "Администрирование списков проверки". В функцонал панели входит: создание и удаление списков, изменение настроек списка, изменение владельца списков, открытие доступа к списку другим пользователям.
+> Панель доступна пользователю с полными правами или с включенной ролью "Администратор (Контур.Фокус)". 
 
 **Сценарий:** Администрирование списков проверки под пользователем Администратор
 
-	001. Панель "Администрирование списков проверки" доступна пользователю с полными правами или с включенной ролью "Администратор (Контур.Фокус)". Панель находится в меню "Настройки" - "Администрирование списков проверки".
+	001. Откроем панель через меню "Настройки" - "Администрирование списков проверки".
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_4_Администрирование_списков_пров_001.png)
 
 	002. В левой части панели расположен фильтр по пользователям.
