еще правочка текста о панели

--- a/docs/Auto/list_admin/Панель Администрирование списков проверки.md
+++ b/docs/Auto/list_admin/Панель Администрирование списков проверки.md
@@ -1,6 +1,15 @@
 **Функционал:** Панель "Администрирование списков проверки"
 
-> Администрирование списков проверки предназначено для централизованного управления списками всех пользователей. Администрирование списков проверки производится через панель "Администрирование списков проверки". В функцонал панели входит: создание и удаление списков, изменение настроек списка, изменение владельца списков, открытие доступа к списку другим пользователям.
+> Администрирование списков проверки предназначено для централизованного управления списками всех пользователей. Администрирование  производится через панель "Администрирование списков проверки". В функцонал панели входит:
+
+> - создание и удаление списков
+
+> - изменение настроек списка
+
+> - изменение владельца списка (в том числе, у нескольких списков одновременно)
+
+> - открытие доступа к списку другим пользователям.
+
 > Панель доступна пользователю с полными правами или с включенной ролью "Администратор (Контур.Фокус)". 
 
 **Сценарий:** Администрирование списков проверки под пользователем Администратор
