подтянулась не таккартинка плюс доваил описание функционала

--- a/docs/Auto/list_admin/Групповое изменение владельца списков.md
+++ b/docs/Auto/list_admin/Групповое изменение владельца списков.md
@@ -1,5 +1,7 @@
 **Функционал:** Групповое изменение владельца списков
 
+> Бывают ситауации, когда необходимо перенести списки от одного пользователя другому. Например, сотрудник уволился.
+> Раммсотрим, как можно одновременно изменить владельца у нескольких списков.
 
 **Сценарий:** Изменение владельца списков
 
@@ -16,7 +18,7 @@
 ![](Групповое_изменение_владельца_списков/Групповое_изменение_владельца_списков_14_Изменение_владельца_списков_004.png)
 
 	005. Выбираем пользователя Петров в качестве нового владельца списков.
-![](Групповое_изменение_владельца_списков/Групповое_изменение_владельца_списков_17_Изменение_владельца_списков_005.png)
+![](Групповое_изменение_владельца_списков/Групповое_изменение_владельца_списков_16_Изменение_владельца_списков_005.png)
 
 	006. У пользователя Гладилина не осталось ни одного списка проверки.
 ![](Групповое_изменение_владельца_списков/Групповое_изменение_владельца_списков_19_Изменение_владельца_списков_006.png)
