--- a/docs/Auto/list_admin/Групповое изменение владельца списков.md
+++ b/docs/Auto/list_admin/Групповое изменение владельца списков.md
@@ -1,7 +1,7 @@
 **Функционал:** Групповое изменение владельца списков
 
 > Бывают ситауации, когда необходимо перенести списки от одного пользователя другому. Например, сотрудник уволился.
-> Раммсотрим, как можно одновременно изменить владельца у нескольких списков.
+> Рассмотрим, как можно одновременно изменить владельца у нескольких списков.
 
 **Сценарий:** Изменение владельца списков
 
