добавил немного описания колонок панели

--- a/docs/Auto/list_admin/Панель Администрирование списков проверки.md
+++ b/docs/Auto/list_admin/Панель Администрирование списков проверки.md
@@ -12,7 +12,7 @@
 
 > Панель доступна пользователю с полными правами или с включенной ролью "Администратор (Контур.Фокус)". 
 
-**Сценарий:** Администрирование списков проверки под пользователем Администратор
+**Сценарий:** Открытие панели "Администрирование списков проверки" под пользователем Администратор
 
 	001. Откроем панель через меню "Настройки" - "Администрирование списков проверки".
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_4_Администрирование_списков_пров_001.png)
@@ -25,3 +25,20 @@
 
 	004. При открытии панели отображаются списки всех полльзователей.
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_7_Администрирование_списков_пров_004.png)
+
+**Сценарий:** Рассмотрим некоторые колонки панели "Администрирование списков проверки"
+
+	005. Колонка панели "Проверка" соответствует реквизиту "Тип проверки" окна настройки списка проверки.
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_8_Администрирование_списков_пров_005.png)
+
+	006. Графа "Данные для проверки" может принимать одно из трех значений.
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_9_Администрирование_списков_пров_006.png)
+
+	007. Значение "Список ИНН" соответствует настройке: 
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_10_Администрирование_списков_пров_007.png)
+
+	008. Значение "Список физ.лиц" соответствует настройке: 
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_11_Администрирование_списков_пров_008.png)
+
+	009. Во всех оставшихся случах будет значение "Контрагенты".
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_12_Администрирование_списков_пров_009.png)
