так так так, посмотрим что тут у нас получитс

--- a/docs/Auto/list_admin/Панель Администрирование списков проверки.md
+++ b/docs/Auto/list_admin/Панель Администрирование списков проверки.md
@@ -26,7 +26,7 @@
 	004. При открытии панели отображаются списки всех полльзователей.
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_7_Администрирование_списков_пров_004.png)
 
-**Сценарий:** Рассмотрим некоторые колонки панели "Администрирование списков проверки"
+**Сценарий:** Описание некоторых колонок панели "Администрирование списков проверки"
 
 	005. Колонка панели "Проверка" соответствует реквизиту "Тип проверки" окна настройки списка проверки.
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_8_Администрирование_списков_пров_005.png)
@@ -42,3 +42,9 @@
 
 	009. Во всех оставшихся случах будет значение "Контрагенты".
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_12_Администрирование_списков_пров_009.png)
+
+	010. В колонке "Размер списка" выводится количество отображаемых в списке пользователя строк.
+
+> Значения в данной колонке рассчитаны с учетом прав и настроек текущего пользователя. Поэтому, реальное число строк может быть больше указанного в колонке.
+
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_13_Администрирование_списков_пров_010.png)
