и еще немного добавил про лписание панели

--- a/docs/Auto/list_admin/Панель Администрирование списков проверки.md
+++ b/docs/Auto/list_admin/Панель Администрирование списков проверки.md
@@ -48,3 +48,19 @@
 > Значения в данной колонке рассчитаны с учетом прав и настроек текущего пользователя. Поэтому, реальное число строк может быть больше указанного в колонке.
 
 ![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_13_Администрирование_списков_пров_010.png)
+
+	011.   Для того чтобы не открывать каждый список для просмотра настроек в панель выведены признаки:
+
+> - включено / выключено наблюдение списка
+
+> - является ли список общим (доступен другим пользователям)
+
+> - используются ли при расчете рисковые факторы
+
+> - маркеры списка рассчитываются по светофору
+
+> - включена / выключена сверка реквизитов контрагента
+
+> - используется ли проверка связанных организаций
+
+![](Панель_Администрирование_списков_проверки/Панель_Администрирование_списков_проверки_14_Администрирование_списков_пров_011.png)
