--- a/docs/Auto/list_admin/Дополнительные настройки.md
+++ b/docs/Auto/list_admin/Дополнительные настройки.md
@@ -1,28 +1,30 @@
 **Функционал:** Дополнительные настройки
 
-> По умолчанию всем пользователям разрешено создавать и редактировать свои списки проверки.
+> По-умолчанию всем пользователям разрешено создавать и редактировать свои списки проверки.
+
+> Также, у пользователей которые запускают модуль впервые на основании анализа базы создаются списки по-умолчанию.
 
 > Для того чтобы запретить создавать и редактировать списки пользователям необходимо отключить настройку "Разрешить настройку списков из панели списков".
 
 **Сценарий:** Запрет на создание и изменение списков проверки пользователями
 
-	001. Откроем модуль. Пользователям разрешено создавать и редактировать списки проверки.
+	1.   Откроем модуль. Пользователям разрешено создавать и редактировать списки проверки.
 ![](Дополнительные_настройки/Дополнительные_настройки_2_Запрет_на_создание_и_изменение_001.png)
 
-	002. Откроем основные настройки модуля.
+	1.   Откроем основные настройки модуля.
 ![](Дополнительные_настройки/Дополнительные_настройки_3_Запрет_на_создание_и_изменение_002.png)
 
-	003. Снимем флаг "Разрешить настройку списков из панели списков".
+	1.   Снимем флаг "Разрешить настройку списков из панели списков".
 ![](Дополнительные_настройки/Дополнительные_настройки_6_Запрет_на_создание_и_изменение_003.png)
 
-	004. Сохраним настройки и перезапустим модуль
+	1.   Сохраним настройки и перезапустим модуль
 ![](Дополнительные_настройки/Дополнительные_настройки_8_Запрет_на_создание_и_изменение_004.png)
 
-	005. Запустим модуль Контур.Фокус. Видно, что из панели списков пропала возможность создания списков.
+	1.   Запустим модуль Контур.Фокус. Видно, что из панели списков пропала возможность создания списков.
 ![](Дополнительные_настройки/Дополнительные_настройки_18_Запрет_на_создание_и_изменение_013.png)
 
-	006. Откроем окно настроек списка проверки и убедимся, что список запрещено редактировать.
+	1.   Откроем окно настроек списка проверки и убедимся, что список запрещено редактировать.
 ![](Дополнительные_настройки/Дополнительные_настройки_21_Запрет_на_создание_и_изменение_014.png)
 
-	007. Откроем список через панель администрирования. Список доступен для редактирования.
+	1.   Откроем список через панель администрирования. Список доступен для редактирования.
 ![](Дополнительные_настройки/Дополнительные_настройки_27_Запрет_на_создание_и_изменение_015.png)
